objects/ExtObj3__x.object
<CustomObject>
    <externalDataSource>CrosDatasource1</externalDataSource>
    <externalName>CrosDatasourceTable2</externalName>
    <fields>
        <fullName>ExtObj3Cites__c</fullName>
        <label>ExtObj3Cites</label>
        <picklist>
            <picklistValues>
                <fullName>hyd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bng</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>atp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>s r nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>film nagar</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ExtObj3PickList1__c</fullName>
        <externalDeveloperName>ExtObj3PickList1Column</externalDeveloperName>
        <label>ExtObj3PickList1</label>
        <picklist>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>66</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>77</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>88</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExtObj3PickList2__c</fullName>
        <externalDeveloperName>ExtObj3PickList2Column</externalDeveloperName>
        <label>ExtObj3PickList2</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ExtObj3</label>
    <pluralLabel>ExtObj3s</pluralLabel>
</CustomObject>